# yolov8_openvino_ws

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ov_yolov8.h
params/: params.cfg
src/: main.cpp  ov_yolov8.cpp  ov_yolov8.h
